# pfit-coord-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.toml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: azure-migration.md  claude-code-setup.md  claude-web-connector-setup.md  cloudflare-tunnel.md  codex-setup.md  deployment-architecture.md  e2e-checklist.md  security-review-2026-04.md
docs/plans/: 2026-04-24-initial-build.md
docs/superpowers/plans/: 2026-04-28-oauth-client-credentials.md
docs/superpowers/specs/: 2026-04-28-oauth-client-credentials-design.md
src/asquared_mcp/: __init__.py  cli.py  models.py  oauth.py  server.py  store.py
src/pfit_coord_mcp/: auth.py  cli.py  config.py  models.py  notify.py  oauth.py  server.py  store.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_notify.py  test_oauth.py  test_smoke_e2e.py  test_store.py  test_tools.py
