[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfit-coord-mcp"
version = "0.1.0"
description = "Three-way coordination MCP server for Claude Web + Claude Code + Codex"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Path Forward IT", email = "engineering@pathforwardit.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "click>=8.1.0,<9.0.0",
    "rich>=13.7.0,<14.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "starlette>=0.40.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[project.scripts]
coord-cli = "pfit_coord_mcp.cli:main"
pfit-coord-mcp = "pfit_coord_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pfit_coord_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pfit_coord_mcp"]
known-third-party = ["mcp", "starlette", "uvicorn", "httpx", "click", "rich", "pydantic", "pytest"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
packages = ["pfit_coord_mcp"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
